# WorldGen_Hunyuan3D

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml
configs/prompts/: scene_planning.txt
hpc/: README.md  download_models.sh  job_run.sh  job_stage12.sh  job_test_hunyuan3d.sh  setup_env.sh
scripts/: debug_mesh.py  rerun_stage3.py  run_pipeline.py  run_stage.py  run_stage12.py  test_hunyuan3d_direct.py
src/: config.py  pipeline.py  vram_manager.py
src/export/: gltf_exporter.py  scene_manifest.py
src/stage1_planning/: asset_placement.py  blockout.py  depth_renderer.py  llm_parser.py  navmesh.py  partitioning.py  reference_image.py  terrain.py
src/stage2_reconstruction/: image_to_3d.py  mesh_texturing.py  navmesh_align.py
src/stage3_decomposition/: connectivity.py  ground_detection.py  mesh_splitter.py  part_merger.py
src/stage4_enhancement/: delighter.py  image_enhancer.py  mesh_refiner.py  multiview_texture.py  texture_baking.py  uv_unwrapper.py  vlm_describer.py
src/utils/: image_utils.py  mesh_utils.py  render_utils.py
unity_project/Assets/Scripts/: NavMeshBaker.cs  PlayerController.cs  SceneLoader.cs
